--- a/main.html
+++ b/main.html
@@ -4,13 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Spaghetti Recipe</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h1>Spaghetti Recipe</h1>
+   <div>
+	   <h1>Ingredients</h1>
+	   <ul>
+		   <li>Spaghetti</li>
+		   <li>Marinara Sauce</li>
+		   <li>Salt</li>
+		   <li>Water</li>
+	   </ul>
+   </div>
+	<div>
+		<h1>Instructions</h1>
+		<ol type="1">
+			<li>Bring water to a boil.</li>
+			<li>Add spaghetti to boiling water.
+				<ol type="1">
+					<li>Add salt to taste.</li>
+					<li>Cook for 10 minutes, stirring occasionally.</li>
+				</ol>
+			</li>
+			<li>Add marinara sauce to a pan, bringing to a simmer.</li>
+			<li>Mix cooked spaghetti with marinara sauce.</li>
+			<li>Enjoy!</li>
+		</ol>
+	</div>
 </body>
 
 </html>
